# IC_Metaverso_backend

./: Dicionário.md  HTTP.md  Plano de estudo.md  Sem título 1.canvas
.obsidian/: graph.json  workspace.json
Curso APIs com Python/Desenvolvendo uma API HTTP/: 1. Revisão protocolo HTTP.md  2. Servidor HTTP básico com Python.md  3.  Exibindo lista de eventos.md  4. Retornando eventos com JSON.md
Curso APIs com Python/Desenvolvendo uma API HTTP/eventos/: app.py  evento.py  evento_online.py  server.py
Curso APIs com Python/Ferramentas de desenvolvedor/: 1. Interagindo com nossa API via CURL.md  2. Requisições com Postman.md  3. Configurando um ambiente virtual.md
Curso APIs com Python/Testes/: Testes (coisas básicas).md  Testes (parte mais prática).md
Estudos/: Como construir um RAG.md  IA.md  RAG.md
Explicação de CRR_Inatel_Project/: CRR_Inatel_Project.md
FastAPI + WebSocket/: Estudos.md
FastAPI_do_zero/: 1. Objetivo do curso.md  Erros e como resolver.md  Estudos.md
FastAPI_do_zero/Parte 1 - Configurando o ambiente de desenvolvimento/: 2. Instalando as dependências.md  3. Criando um projeto.md  4.  Primeira execução de um "Hello, World!".md  5. Instalando as ferramentas de desenvolvimento.md  6. Configurando as ferramentas de desenvolvimento.md  7. Testando o hello world.md  8. Simulado sobre a parte 1.md
FastAPI_do_zero/parte_pratica_teste/: requirements.txt
FastAPI_do_zero/parte_pratica_teste/fast_zero_test/: .coverage  pyproject.toml
Revisões/: Revisão 09-11-2025.md
Unity/: Básico.md  Pathway Unity Essentials.md
backend/app/: pyproject.toml
backend/app/app/: faiss_metadata.json  ia.py  main.py  mqtt.py  websocket.py
documentacao/: Manual.md
documentacao/O que foi feito/: Main.py.md  configurações gerais.md  ia.py.md  mqtt.py.md  websocket.py.md
