[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "AnnaBittencourt19",email = "bittencourtanna19@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10.0,<3.15"
dependencies = [
    "fastapi[standard] (>=0.122.0,<0.123.0)",
    "langchain-huggingface (>=1.1.0,<2.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "faiss-cpu (>=1.13.1,<2.0.0)",
    "pymupdf (>=1.26.6,<2.0.0)",
    "numpy (>=2.1.0,<3.0.0)",
    "sentence-transformers (>=5.2.0,<6.0.0)",
    "langchain (>=1.1.3,<2.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "chromadb (>=1.3.6,<2.0.0)",
    "langchain-core (>=1.1.3,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-chroma (>=1.0.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.14.6,<0.15.0)"
]
mqtt = [
    "paho-mqtt (>=2.1.0,<3.0.0)"
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format] 
preview = true 
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks] 
lint = 'ruff check' 
pre_format = 'ruff check --fix' 
format = 'ruff format'
run = 'fastapi dev fast_zero/app.py'
pre_test = 'task lint' 
test = 'pytest -s -x --cov=fast_zero -vv' 
post_test = 'coverage html'